@@ -15,13 +15,13 @@
 // Any option in webcal_user_pref can be configured here
 //
 
-//This theme changes the color scheme only to the hues of spring.
 //This theme will be available to both normal users and System Settings.
 $webcal_theme = array (
 'BGCOLOR'     =>'#CCFFCC',
 'CELLBG'      =>'#99FF99',
 'HASEVENTSBG' =>'#66FF66',
 'H2COLOR'     =>'#006600',
+'MENU_THEME'  =>'spring',
 'OTHERMONTHBG'=>'#999933',
 'POPUP_BG'    =>'#6699CC',
 'POPUP_FG'    =>'#000000',
