@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Fixed bug 1492771: rejection of 'Themes' AND 'Menu themes' don't work
  - Fixed bug 1492753: missing 'convert to GMT' at wizard 'step 4
  - Fixed bug 1491491: reload_remotes.php doesn't display any error message
  - Implemented RFE 1490058: export a certain category
